--- a/notes/3march/forms.html
+++ b/notes/3march/forms.html
@@ -27,7 +27,7 @@
             <p>
                 <label for="password">Type in your password</label>
                 <!-- Type password hides the characters being entered -->
-                <input type="password" name="passwordbox" class="form-control" value="password" id="password">
+                <input type="password" name="passwordbox" class="form-control" value="password" id="password" minlength="8">
             </p>
             <p>
                 <label for="profile">Create a profile name</label>
